loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:9: error: ';' expected but '{' found.
  while (!crossing()){
                     ^